# libscreenshot

./: Cargo.toml  LICENSE  README.md
examples/: examples.rs  write_to_file.rs
macos-bindings/: Cargo.toml  README.md  build.rs
macos-bindings/src/: lib.rs
src/: error.rs  lib.rs  platform.rs  screenshot_provider.rs  shared.rs  traits.rs
src/platform/: dummy_provider.rs  linux.rs  macos.rs  windows.rs
src/platform/linux/: x11_provider.rs
src/platform/macos/: cg_provider.rs
src/platform/windows/: gdi_provider.rs  graphics_capture_provider.rs
src/shared/: area.rs  generic_area.rs  screen_id.rs  window_id.rs
src/traits/: area_capture_provider.rs  full_capture_provider.rs  screen_capture_provider.rs  window_capture_provider.rs
x11-stresstest/: Cargo.toml  README.md
x11-stresstest/src/: main.rs
