[package]
name = "libscreenshot"
version = "0.3.1"
edition = "2021"

[features]
default = ["windows", "linux", "macos"]

# Windows
windows_graphics_capture = []
windows_gdi = []
windows = [
    "windows_graphics_capture",
    "windows_gdi"
]

# Linux
linux_xorg = []
linux_wayland = []
linux = [
    "linux_xorg",
    "linux_wayland"
]

# macOS
macos = []

[dependencies]
thiserror = "1"
image = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xrandr"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"
core-foundation = "0.9"
foreign-types = "0.5"
macos-bindings = { path = "./macos-bindings" }